# greedy-align

./: CMakeLists.txt  README.md  benchmark.cpp  benchmark.py  benchmark_pairwise.cpp  benchmark_trace_recon.cpp  draft.md  main.cpp  test.cpp  test_k_polymer.cpp  utils.hpp
aligner/: aligner.hpp  greedy_aligner.hpp  k_matching.hpp  parasail_aligner.hpp  seqan_aligner.hpp
benchmark/: benchmark.hpp  benchmark_pairwise.hpp  benchmark_trace_recon.hpp
ensembler/: ensembler.hpp  greedy_ensembler.hpp  pog_ensembler.hpp
tools/: generate_dataset.hpp  msa_dataset.hpp
type/: k_polymer.hpp
variant_caller/: greedy_variant_caller.hpp  variant_caller.hpp
